GitHub Check 1.1.0b, 2015-04-23
------------------------
- Fixed #1 Оптимізація швидкодії 
    * Додано кешування данних.
    * Додано можливість вручну запустити перевірку.
    * Додано пряме посилання з адмін панелі на створення завданнь в репозиторії.
    * Додано пряме посилання на перегляд списку завдань.

GitHub Check 1.0.0b, 2015-04-22
------------------------
- Перша версія