@@ -1,0 +1,5 @@
+<?php defined('COT_CODE') or die('Wrong URL');
+
+//Github res
+$R['github_error'] = '<span class="label label-important">{$text}</span>';
+$R['github_success'] =  '<span class="label label-success">{$text}</span>';
