@@ -1,11 +1,11 @@
-##GitHub Check 1.1.0b
+##GitHub Check 1.2.0b
 
 UA
 ====
 
-Розширення дозволяє слідкувати ща актуальними оновленнями встановленних розширень сайту на Cotonti, порівнює версію встановленного розширення і його github версією, а також завантажувати архів прямо з адміністративноїпанелі.
+Розширення дозволяє слідкувати ща актуальними оновленнями встановленних розширень сайту на Cotonti, порівнює версію встановленного розширення і його github версією, а також завантажувати архів прямо з адміністративної панелі.
 
-##Інструкція по установці 
+## Інструкція по установці 
 
 1. Завантажити і розпакувати вміст архіву, скопіювати файли в папку plugins. 
 2. Встановити через панель: (Управління сайтом / Розширення / GitHub Check).
@@ -20,15 +20,17 @@ githubcheckupdate|CrazyFreeMan|cot-githubcheckupdate|githubcheckupdate
 
 Для автоматичної підтримки роботи розширень з GitHub Check в конфігурації додайте параметр githubcheck (hidden) заповненну за прикладом.
 
-##Увага!
-Враховуйте що при кожному відкриті адміністративної частини розширення для кожного розширення що відслідковується виконується звернення до GitHub через що можливо "підвисання".
+## Увага!
+Враховуйте що при кожному оновленні для кожного розширення що відслідковується виконується звернення до GitHub через що можливо "підвисання".
+
+### Функція "оновлення в 1 клік" експерементальна, використовуйте на свій страх і ризик, розширення тестується, будь-які проблеми - тільки на вашій совісті. 
 
 RU
 ====
 
 Плагин позволяет следить за актуальными обновлениями для установленных расширений сайтов Cotonti проверяя текущую версию и версию плагина в репозитории github-a и загружать архив обновленной версии прямо из админки сайта.
 
-##Установка:
+## Установка:
 
 1. Загрузить и распаковать файли в папку plugins.
 2. Установить через панель: (Управленние сайтом / Расширения / GitHub Check).
@@ -44,8 +46,10 @@ githubcheckupdate|CrazyFreeMan|cot-githubcheckupdate|githubcheckupdate
 Для автоматической поддержки расширениями работы с GitHub Check в конфигурации создайте параметр githubcheck (hidden) заполненную по примеру.
 
 
-##Внимание!
-Учитывайте что при каждом входе в админку плагина - для каждого расширения, которое отслеживается, происходит обращение к GitHub из-за чего может быть "подвисание".
+## Внимание!
+Учитывайте что при каждом обновлении - для каждого расширения, которое отслеживается, происходит обращение к GitHub из-за чего может быть "подвисание".
+
+### Функция "обновление в 1 клик" эксперементальная, используйте на свой страх и риск, любые проблемы - на вашей совести.
 
 Розробник: Ярослав Романенко (yaroslav.romanenko@gmail.com)
 
