@@ -1,3 +1,9 @@
+GitHub Check 1.2.0b, 2015-04-26
+-----------------------
+- Fixed #2 Оновлення в 1 клік
+    * Додана можливість оновити розширення через адмінку
+    * Створення копії оновлюваного розширення
+
 GitHub Check 1.1.0b, 2015-04-23
 ------------------------
 - Fixed #1 Оптимізація швидкодії 
